grammar.js
    source: ($) => choice(
      repeat1($._top_level_declaration),
      $.block
    ),

    // A file holds either declarations or a bare statement list. Vendors export
    // one POU per file, so a lone `METHOD`, a global variable list, or a leading
    // pragma are all whole files in practice.
    _top_level_declaration: ($) =>
      choice(
        $.function_block_declaration,
        $.test_function_block_declaration,
        $.function_declaration,
        $.program_declaration,
        $.class_declaration,
        $.interface_declaration,
        $._pou_member,
        $.type_declaration,
        $.configuration_declaration,
        // Only a global variable list stands alone as a file. Admitting every
        // section here would let a bare `VAR` open one, which collides with
        // `var` used as an ordinary identifier.
        $.var_global,
        $.pragma
      ),

    // A simple statement is always terminated by `;`. After a compound
    // statement the terminator is optional, which is what most vendors accept
    // and what the sources in the wild rely on (`END_IF` on its own line).
    block: ($) =>
      repeat1(
        choice(
          seq($._simple_statement, SEMICOLON),
          $._terminated_compound_statement,
          $.noop,
          $.pragma
        )
      ),

    _terminated_compound_statement: ($) =>
      prec.right(seq($._compound_statement, optional(SEMICOLON))),

    // Program organization units
    function_block_declaration: ($) =>
      seq(
        caseInsensitive("function_block"),
        optional(field("access", $.access_specifier)),
        field("name", $.identifier),
        optional($.extends_clause),
        optional($.implements_clause),
        repeat(field("var_section", $._var_section)),
        field("body", optional($.block)),
        repeat(field("member", $._pou_member)),
        caseInsensitive("end_function_block")
      ),

    // Unit-test POU as used by ST test frameworks. Body is identical to a
    // regular function block.
    test_function_block_declaration: ($) =>
      seq(
        caseInsensitive("test_function_block"),
        field("name", $.identifier),
        optional($.extends_clause),
        optional($.implements_clause),
        repeat(field("var_section", $._var_section)),
        field("body", optional($.block)),
        repeat(field("member", $._pou_member)),
        caseInsensitive("end_test_function_block")
      ),

    // Methods, properties and actions may be written inside the POU they
    // belong to, or exported one per file.
    _pou_member: ($) =>
      choice(
        $.method_declaration,
        $.property_declaration,
        $.action_declaration
      ),

    // A single base for a class, several for an interface.
    extends_clause: ($) =>
      seq(
        caseInsensitive("extends"),
        field("base", $.identifier),
        repeat(seq(",", field("base", $.identifier)))
      ),

    type_declaration: ($) =>
      seq(
        caseInsensitive("type"),
        repeat1($.type_definition),
        caseInsensitive("end_type")
      ),

    // A struct, a union, an enumeration, or an alias for any other type —
    // which covers the subrange (`INT (0..100)`) and array
    // (`ARRAY[0..9] OF INT`) forms.
    type_definition: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field(
          "definition",
          choice(
            $.struct_definition,
            $.union_definition,
            $.enum_definition,
            $.type_name
          )
        ),
        optional(seq(":=", field("initial_value", $._initial_value))),
        // Vendors terminate the definition with `;` after an enumeration or an
        // alias but not always after `END_STRUCT`/`END_UNION`.
        optional(";")
      ),

    struct_definition: ($) =>
      seq(
        caseInsensitive("struct"),
        repeat($.struct_field),
        caseInsensitive("end_struct")
      ),

    struct_field: ($) =>
      seq(
        repeat($.pragma),
        field("name", $.identifier),
        optional(seq(caseInsensitive("at"), field("location", $.direct_address))),
        ":",
        field("type", $.type_name),
        optional(seq(":=", field("initial_value", $._initial_value))),
        ";"
      ),

    // Members of a UNION overlay the same memory, so unlike a struct field
    // they take neither an `AT` location nor an initial value.
    _var_section: ($) =>
      choice(
        $.var_input,
        $.var_output,
        $.var_in_out,
        $.var,
        $.var_temp,
        $.var_static,
        $.var_global,
        $.var_external,
        $.var_inst
      ),

    // CONSTANT / RETAIN / NON_RETAIN / PERSISTENT may follow any section
    // keyword, and may be combined (`VAR RETAIN PERSISTENT`).
    var: ($) => varSection($, "var"),
    variable_declaration: ($) =>
      seq(
        repeat($.pragma),
        field("name", $.identifier),
        optional(seq(caseInsensitive("at"), field("location", $.direct_address))),
        ":",
        field("type", $.type_name),
        optional(seq(":=", field("initial_value", $._initial_value))),
        ";"
      ),

    // A variable may be initialised with a plain expression, an array
    // initialiser or a structure initialiser.
    _initial_value: ($) =>
      choice($._expression, $.array_initializer, $.structure_initializer),

    // `[1, 2, 3]`, including the `n(value)` repetition form.
    array_initializer: ($) => seq("[", commaSep1($._array_initializer_item), "]"),

    _array_initializer_item: ($) =>
      choice($.array_initializer_repetition, $._initial_value),

    array_initializer_repetition: ($) =>
      seq(
        field("count", $.integer_literal),
        "(",
        commaSep1($._array_initializer_item),
        ")"
      ),

    // `(a := 1, b := 2)`. Every element is named, which is what separates this
    // from a parenthesized expression.
    structure_initializer: ($) =>
      seq("(", commaSep1($.structure_element_initializer), ")"),

    structure_element_initializer: ($) =>
      seq(
        field("name", $.identifier),
        ":=",
        field("value", $._initial_value)
      ),

    type_name: ($) => choice(
      $.array_type,
      $.sized_type,
      $.pointer_type,
      $.reference_type,
      $.qualified_type_name,
      $.identifier
    ),

    array_type: ($) =>
      seq(
        caseInsensitive("array"),
        "[",
        field("range", $.array_range),
        repeat(seq(",", field("range", $.array_range))),
        "]",
        caseInsensitive("of"),
        field("element_type", $.type_name)
      ),

    array_range: ($) =>
      seq(
        field("start", $._array_bound),
        "..",
        field("end", $._array_bound)
      ),

    // Bounds are a restricted expression rather than `_expression`: a float
    // is never a valid bound, and admitting `float_literal` here would make
    // the lexer read the `0.` of `0..MAX` as a float.
    _array_bound: ($) =>
      choice(
        $.integer_literal,
        $.identifier,
        $.qualified_identifier,
        $.array_bound_expression
      ),

    _expression: ($) =>
      choice(
        $.qualified_identifier,
        $.identifier,
        $.deref_expression,
        $.unary_expression,
        $.binary_operator,
        $.boolean_operator,
        $.comparison_operator,
        $.equality_operator,
        $.parenthesized_expression,
        $.function_call,
        $.index_expression,
        $.direct_address,
        $.float_literal,
        $.integer_literal,
        $.string_literal,
        $.time_literal,
        $.date_literal,
        $.time_of_day_literal,
        $.date_and_time_literal,
        $.typed_literal,
        $.true,
        $.false
      ),

    function_call: ($) =>
      seq(
        field("name", $._callable),
        "(",
        parameterList($.param_assignment),
        ")"
      ),

    // A call target may be namespaced (`FPU.IsRealNumber`), a method on an
    // instance (`fb.Run`), or the base implementation (`SUPER^`).
    _callable: ($) =>
      choice($.identifier, $.qualified_identifier, $.deref_expression),

    param_assignment: ($) =>
      choice(
        seq(optional(seq($.identifier, ":=")), $._expression),
        seq(
          optional(caseInsensitive("not")),
          $.identifier,
          "=>",
          field("target", $._variable)
        )
      ),

    true: (_) => choice("TRUE", "true", "True"),
    false: (_) => choice("FALSE", "false", "False"),

    parenthesized_expression: ($) =>
      prec(PREC.parenthesized_expression, seq("(", $._expression, ")")),

    binary_operator: ($) =>
      choice(
        prec.left(
          PREC.add,
          seq(
            field("left", $._expression),
            field("operator", choice("+", "-")),
            field("right", $._expression)
          )
        ),
        prec.left(
          PREC.multiply,
          seq(
            field("left", $._expression),
            field("operator", choice("*", "/", caseInsensitive("mod"))),
            field("right", $._expression)
          )
        ),
        prec.right(
          PREC.power,
          seq(
            field("left", $._expression),
            field("operator", "**"),
            field("right", $._expression)
          )
        )
      ),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          field("left", $._expression),
          field("operator", choice("<", "<=", ">=", ">")),
          field("right", $._expression)
        )
      ),

    equality_operator: ($) =>
      prec.left(
        PREC.equality,
        seq(
          field("left", $._expression),
          field("operator", choice("=", "<>")),
          field("right", $._expression)
        )
      ),

    boolean_operator: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $._expression),
            field("operator", caseInsensitive("and")),
            field("right", $._expression)
          )
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $._expression),
            field("operator", caseInsensitive("or")),
            field("right", $._expression)
          )
        ),
        prec.left(
          PREC.xor,
          seq(
            field("left", $._expression),
            field("operator", caseInsensitive("xor")),
            field("right", $._expression)
          )
        )
      ),

    integer_literal: (_) =>
      token(
        choice(
          seq(choice("2#"), repeat1(/_?[0-1]+/)),
          seq(choice("8#"), repeat1(/_?[0-7]+/)),
          seq(repeat1(/[0-9]+_?/)),
          seq(choice("16#"), repeat1(/_?[A-Fa-f0-9]+/))
        )
      ),

    noop: (_) => SEMICOLON,

    _simple_statement: ($) =>
      choice(
        $.assignment,
        $.fb_invocation,
        $.return,
        $.exit,
        $.continue
      ),

    return: ($) => seq(caseInsensitive("return"), optional($._expression)),

    fb_invocation: ($) =>
      seq($._callable, "(", parameterList($.param_assignment), ")"),

    // Variables
    identifier: (_) => /[_a-zA-Z][_a-zA-Z0-9]*/,

    // Anything that can be read from or assigned to.
    _variable: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.index_expression,
        $.deref_expression,
        $.direct_address
      ),

    // A member may be an integer to address a single bit, e.g. `input.0`.
    // The base is not restricted to a plain identifier: `messages[i].step` and
    // `THIS^.state` both start a member chain.
    qualified_identifier: ($) =>
      seq(
        choice($.identifier, $.index_expression, $.deref_expression),
        repeat1(seq(".", choice($.identifier, $.bit_selector)))
      ),

    // `p^`, `THIS^`, `SUPER^`, and chains such as `p^^` or `arr[i]^`.
    deref_expression: ($) =>
      prec.left(
        seq(
          field(
            "operand",
            choice(
              $.this,
              $.super,
              $.identifier,
              $.qualified_identifier,
              $.index_expression,
              $.deref_expression
            )
          ),
          "^"
        )
      ),

    this: (_) => caseInsensitive("this"),

    super: (_) => caseInsensitive("super"),

    index_expression: ($) =>
      seq(
        field("array", $._variable),
        "[",
        field("index", $._expression),
        repeat(seq(",", field("index", $._expression))),
        "]"
      ),

    // Assignments. `REF=` binds a reference to a variable rather than copying
    // a value into it.
    assignment: ($) =>
      seq(
        field("identifier", $._variable),
        choice(":=", caseInsensitive("ref=")),
        field("expression", $._expression)
      ),

    // If statements
    if_statement: ($) =>
      seq(
        caseInsensitive("if"),
        field("condition", $._expression),
        caseInsensitive("then"),
        field("consequence", optional($.block)),
        repeat(field("alternative", $.elsif_clause)),
        optional(field("alternative", $.else_clause)),
        caseInsensitive("end_if")
      ),

    elsif_clause: ($) =>
      seq(
        caseInsensitive("elsif"),
        field("condition", $._expression),
        caseInsensitive("then"),
        field("consequence", optional($.block))
      ),

    else_clause: ($) =>
      seq(caseInsensitive("else"), field("body", optional($.block))),

    // Case
