test/corpus/if_statement.txt
==================
Single if statement
==================

if true then
    ;
end_if;

---

(source
  (block
    (if_statement
      condition: (true)
      consequence: (block
        (noop)))))

==================
If else statement
==================

if expr then
    ;
else
    ;
end_if;

---

(source
  (block
    (if_statement
      condition: (identifier)
      consequence: (block
        (noop))
      alternative: (else_clause
        body: (block
          (noop))))))

==================
If elsif statement
==================

if expr then
    ;
elsif expr then
    ;
end_if;

---

(source
  (block
    (if_statement
      condition: (identifier)
      consequence: (block
        (noop))
      alternative: (elsif_clause
        condition: (identifier)
        consequence: (block
          (noop))))))

==================
If elsif else statement
==================

if expr then
    ;
elsif expr then
    ;
else
    ;
end_if;

---

(source
  (block
    (if_statement
      condition: (identifier)
      consequence: (block
        (noop))
      alternative: (elsif_clause
        condition: (identifier)
        consequence: (block
          (noop)))
      alternative: (else_clause
        body: (block
          (noop))))))

==================
If 3x elsif else statement
==================

if expr then
    ;
elsif expr then
    ;
elsif expr then
    ;
elsif expr then
    ;
else
    ;
end_if;

---

(source
  (block
    (if_statement
      condition: (identifier)
      consequence: (block
        (noop))
      alternative: (elsif_clause
        condition: (identifier)
        consequence: (block
          (noop)))
      alternative: (elsif_clause
        condition: (identifier)
        consequence: (block
          (noop)))
      alternative: (elsif_clause
        condition: (identifier)
        consequence: (block
          (noop)))
      alternative: (else_clause
        body: (block
          (noop))))))

==================
Nested if statement
==================

if expr then
    if expr then
        ;
    end_if;
end_if;

---

(source
  (block
    (if_statement
      condition: (identifier)
      consequence: (block
        (if_statement
          condition: (identifier)
          consequence: (block
            (noop)))))))

==================
If case
==================

IF true then
    ;
elsif s then
    ;
else
    ;
end_if;

---

(source
  (block
    (if_statement
      condition: (true)
      consequence: (block
        (noop))
      alternative: (elsif_clause
        condition: (identifier)
        consequence: (block
          (noop)))
      alternative: (else_clause
        body: (block
          (noop))))))
